--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,13 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: 郑彧个人博客
+email: zhengyu.cmu@gmail.com
+description: > # 把一些学习上的东西记录下来，方便自己记忆。如果能够影响一两个人，也是功德一件。
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: yuzheng
+github_username:  yu-zheng
 
 # Build settings
 markdown: kramdown
